Adição do modelo Quadro de Horários
